--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -58,16 +58,33 @@
   border-width: 0px;
 }
 
-#custom-reboot,
+#custom-reboot{
+  background-color: rgba(15,27,53,0.9);
+  margin-top: 6px; /* 与屏幕顶部留出距离 */
+  /* margin-bottom: 4px; */
+  padding: 4px 2px; /* 保持内部间距 */
+  border-radius: 10px 0 0 10px;
+  border-width: 0px;
+}
+
 #bluetooth,
 #battery,
 #pulseaudio,
-#backlight,
-#custom-temperature{
+#backlight{
   background-color: rgba(15,27,53,0.9);
   margin-top: 6px; /* 与屏幕顶部留出距离 */
   /*margin-bottom: 4px;*/
   padding: 4px 2px; /* 保持内部间距 */
+  border-width: 0px;
+}
+
+#custom-temperature{
+  background-color: rgba(15,27,53,0.9);
+  margin-top: 6px; /* 与屏幕顶部留出距离 */
+  margin-right: 6px; /* 外部间距增加 */
+  /*margin-bottom: 4px;*/
+  padding: 4px 2px; /* 保持内部间距 */
+  border-radius: 0 10px 10px 0;
   border-width: 0px;
 }
 
