Fix background color of tray menu

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -27,6 +27,10 @@
   border-width: 0px;
 }
 
+#tray menu{
+    background-color: #000000;
+}
+
 #clock{
   background-color: rgba(15,27,53,0.9);
   margin-top: 6px; /* 与屏幕顶部留出距离 */
@@ -116,7 +120,7 @@
 /* 鼠标悬停变亮一点 */
 #bluetooth:hover,
 #network:hover,
-/*#tray:hover,*/
+/* #tray:hover, */
 #backlight:hover,
 #battery:hover,
 #pulseaudio:hover,
