--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -27,6 +27,24 @@
   border-width: 0px;
 }
 
+#custom-archicon{
+  background-color: rgba(15,27,53,0.9);
+  margin-top: 6px; /* 与屏幕顶部留出距离 */
+  margin-right: 6px;
+  /*margin-bottom: 4px;*/
+  padding: 4px 2px; /* 保持内部间距 */
+  border-radius: 10px 10px 10px 10px;
+  border-width: 0px;
+}
+menu {
+    border-radius: 15px;
+    background: rgba(15,27,53,0.9);
+    color: #B5E8E0;
+}
+menuitem {
+    border-radius: 15px;
+}
+
 #tray menu{
   background-color: rgba(15,27,53,0.9);
 }
@@ -41,15 +59,6 @@
   border-width: 0px;
 }
 
-#custom-power{
-  background-color: rgba(15,27,53,0.9);
-  margin-top: 6px; /* 与屏幕顶部留出距离 */
-  margin-right: 6px;
-  /*margin-bottom: 4px;*/
-  padding: 4px 2px; /* 保持内部间距 */
-  border-radius: 0 10px 10px 0;
-  border-width: 0px;
-}
 
 #network,
 #custom-lock{
@@ -71,6 +80,7 @@
   border-width: 0px;
 }
 
+#cava,
 #bluetooth,
 #battery,
 #pulseaudio,
